# hydra-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  experiment.py  requirements.txt
.devcontainer/: devcontainer.json  environment
config/: config.yaml
config/db/: mysql.yaml  postgresql.yaml
config/site/: amazon.yaml  fb.yaml  google.yaml
docker/environment/: Dockerfile
docker/environment/scripts/: install_cmake.sh  install_omb.sh
examples/: config.yaml  main.cpp
examples/app/: CMakeLists.txt  app.cpp  app.h
include/: configuration.h  container_output.h
